# lexicom_test

task_1/: .env.example  docker-compose.yml  main.py  pyproject.toml
task_1/.docker/api/: Dockerfile
task_1/infra/: config.py
task_1/redisdata/: dump.rdb
task_1/shared/db/: redis.py
task_1/web_api/: server.py
task_1/web_api/exceptions/: __init__.py  base.py
task_1/web_api/routes/v1/: __init__.py
task_1/web_api/routes/v1/public/: __init__.py  get.py  post.py  put.py  router.py
task_2/: join.sql  update_with_sub_query.sql
